# obsidian-cli-logger

./: Cargo.toml  README.md
src/: main.rs
