[package]
name = "obs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap_complete = "4.0.7"
preferences = "1.1.0"
urlencoding = "2.1.2"
serde_derive = "1.0.151"
serde = "1.0.151"
